[tool.poetry]
name = "ai-agent-api"
version = "0.1.0"
description = ""
authors = ["kavyal2 <kavya9140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
openai = "^1.34.0"
textblob = "^0.18.0.post0"
python-dotenv = "^1.0.1"
instructor = "^1.3.4"
tenacity = "^8.5.0"
pydantic = "^2.8.2"
fastapi = "^0.112.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
